--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
         - name: bun-app
-          image: umershamshad/bun-app:1  # Replace with your actual tag
+          image: umershamshad/bun-app:3
           ports:
             - containerPort: 3000
           env:
