--- a/k8s/application.yaml
+++ b/k8s/application.yaml
@@ -8,7 +8,7 @@ spec:
   source:
     repoURL: https://github.com/Umershamshad53/bun-app.git  # Change if needed
     targetRevision: HEAD
-    path: k8s/
+    path: k8s
   destination:
     server: https://kubernetes.default.svc
     namespace: default
